@@ -269,6 +269,7 @@ namespace libtorrent
 		, m_should_be_loaded(true)
 		, m_last_download((std::numeric_limits<boost::int16_t>::min)())
 		, m_num_seeds(0)
+		, m_num_connecting_seeds(0)
 		, m_last_upload((std::numeric_limits<boost::int16_t>::min)())
 		, m_storage_tick(0)
 		, m_auto_managed(p.flags & add_torrent_params::flag_auto_managed)
@@ -3664,7 +3665,7 @@ namespace libtorrent
 			return;
 		}
 
-		if (int(m_connections.size()) - m_num_connecting < 10)
+		if (int(m_connections.size()) < 10)
 		{
 			// there are too few peers. Be conservative and don't assume it's
 			// well seeded until we can connect to more peers
@@ -9063,6 +9064,8 @@ namespace libtorrent
 
 		int seeds = 0;
 		int num_uploads = 0;
+		int num_connecting = 0;
+		int num_connecting_seeds = 0;
 		std::map<piece_block, int> num_requests;
 		for (const_peer_iterator i = this->begin(); i != this->end(); ++i)
 		{
@@ -9071,6 +9074,11 @@ namespace libtorrent
 			TORRENT_ASSERT(m_ses.has_peer(*i));
 #endif
 			peer_connection const& p = *(*i);
+
+			if (p.is_connecting()) ++num_connecting;
+
+			if (p.is_connecting() && p.peer_info_struct()->seed)
+				++num_connecting_seeds;
 
 			if (p.peer_info_struct() && p.peer_info_struct()->seed)
 				++seeds;
@@ -9094,6 +9102,14 @@ namespace libtorrent
 		}
 		TORRENT_ASSERT(num_uploads == int(m_num_uploads));
 		TORRENT_ASSERT(seeds == int(m_num_seeds));
+		TORRENT_ASSERT(num_connecting == int(m_num_connecting));
+		TORRENT_ASSERT(num_connecting_seeds == int(m_num_connecting_seeds));
+		TORRENT_ASSERT(int(m_num_uploads) <= int(m_connections.size()));
+		TORRENT_ASSERT(int(m_num_seeds) <= int(m_connections.size()));
+		TORRENT_ASSERT(int(m_num_connecting) <= int(m_connections.size()));
+		TORRENT_ASSERT(int(m_num_connecting_seeds) <= int(m_connections.size()));
+		TORRENT_ASSERT(int(m_num_connecting) + int(m_num_seeds) >= int(m_num_connecting_seeds));
+		TORRENT_ASSERT(int(m_num_connecting) + int(m_num_seeds) - int(m_num_connecting_seeds) <= int(m_connections.size()));
 
 		if (has_picker())
 		{
@@ -12197,7 +12213,7 @@ namespace libtorrent
 			st->pieces.resize(num_pieces, false);
 		}
 		st->num_pieces = num_have();
-		st->num_seeds = num_seeds();
+		st->num_seeds = num_seeds() - int(m_num_connecting_seeds);
 		if ((flags & torrent_handle::query_distributed_copies) && m_picker.get())
 		{
 			boost::tie(st->distributed_full_copies, st->distributed_fraction) =
@@ -12253,7 +12269,7 @@ namespace libtorrent
 		TORRENT_ASSERT(is_single_thread());
 		INVARIANT_CHECK;
 
-		return (std::max)(0, int(m_connections.size()) - m_num_seeds - m_num_connecting);
+		return std::max(0, int(m_connections.size()) - m_num_seeds);
 	}
 
 	void torrent::tracker_request_error(tracker_request const& r
