@@ -1,3 +1,4 @@
+	* fix issue where num_seeds could be greater than num_peers in torrent_status
 	* finished non-seed torrents can also be in super-seeding mode
 	* fix issue related to unloading torrents
 	* fixed finished-time calculation
